Add new demo with remote data example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/datatable/demo5" routerLinkActive="active">Demo 5</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/datatable/demo6" routerLinkActive="active">Demo 6</a>
+      </li>
     </ul>
   </div>
 </nav>
