--- a/src/app/components/datatable/demo6/data-table-demo6.html
+++ b/src/app/components/datatable/demo6/data-table-demo6.html
@@ -28,10 +28,9 @@
 <br>
 <br>
 <p class="h6">Notes for testers and developers</p>
+<p>Selected Count: {{ filmsTable.selectedRows.length }} </p>
 <ul>
   <li>
     This demo wants to demonstrate what will be shown when no items are rendered into the table.
   </li>
 </ul>
-
-<h1>Hi!</h1>
