--- a/projects/ngx-table/src/lib/components/pagination/pagination.component.html
+++ b/projects/ngx-table/src/lib/components/pagination/pagination.component.html
@@ -20,16 +20,16 @@
       <button [disabled]="dataTable.offset <= 0"
               (click)="pageFirst()"
               class="btn btn-default pagination-firstpage"
-              [title]="dataTable.labels.firstPage"
               [attr.aria-controls]="dataTable.id">
         <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+        <span class="sr-only">{{ dataTable.labels.firstPage }} </span>
       </button>
       <button [disabled]="dataTable.offset <= 0"
               (click)="pageBack()"
               class="btn btn-default pagination-prevpage"
-              [title]="dataTable.labels.prevPage"
               [attr.aria-controls]="dataTable.id">
         <i class="fa fa-angle-left" aria-hidden="true"></i>
+        <span class="sr-only">{{ dataTable.labels.prevPage }} </span>
       </button>
       <div class="pagination-page">
         <div class="input-group">
@@ -59,16 +59,16 @@
       <button [disabled]="(dataTable.offset + dataTable.limit) >= dataTable.itemCount"
               (click)="pageForward()"
               class="btn btn-default pagination-nextpage"
-              [title]="dataTable.labels.nextPage"
               [attr.aria-controls]="dataTable.id">
         <i class="fa fa-angle-right" aria-hidden="true"></i>
+        <span class="sr-only">{{ dataTable.labels.nextPage }}</span>
       </button>
       <button [disabled]="(dataTable.offset + dataTable.limit) >= dataTable.itemCount"
               (click)="pageLast()"
               class="btn btn-default pagination-lastpage"
-              [title]="dataTable.labels.lastPage"
               [attr.aria-controls]="dataTable.id">
         <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+        <span class="sr-only">{{ dataTable.labels.lastPage }}</span>
       </button>
     </div>
   </div>
