--- a/src/app/components/datatable/demo1/data-table-demo1.html
+++ b/src/app/components/datatable/demo1/data-table-demo1.html
@@ -5,6 +5,7 @@
         [itemCount]="itemCount"
         [pageLimits]="limits"
         (reload)="reloadItems($event)"
+        [wrapperClass]="'table-responsive'"
         (rowClick)="rowClick($event)"
         (rowDoubleClick)="rowDoubleClick($event)"
         [rowTooltip]="rowTooltip" >
