--- a/src/app/components/datatable/demo4/data-table-demo4.html
+++ b/src/app/components/datatable/demo4/data-table-demo4.html
@@ -1,6 +1,7 @@
 <div>
   <data-table
     [title]="'Employees'"
+    [wrapperClass]="'table-responsive'"
     [items]="items"
     [itemCount]="itemCount"
     [showReloading]="true"
