--- a/projects/ngx-table/src/lib/components/pagination/pagination.component.css
+++ b/projects/ngx-table/src/lib/components/pagination/pagination.component.css
@@ -1,15 +1,15 @@
 .pagination-controllers select {
-  min-width: 5rem;
+  /*min-width: 5rem;*/
   /*padding: 1px 0px 0px 5px;*/
   text-align: right;
 }
 
 .pagination-pages > * {
-  margin: 0 0.15rem;
+  /*margin: 0 0.15rem;*/
 }
 
 .pagination-limit {
-  margin-right: 1.5rem;
+  /*margin-right: 1.5rem;*/
 }
 
 .pagination-box button {
