--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
 </nav>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-8 p-4 pr-2">
+    <div class="col p-4 pr-2">
       <router-outlet></router-outlet>
     </div>
     <div class="col-4 p-4 pr-2">
