--- a/src/app/components/datatable/demo7/demo7.component.html
+++ b/src/app/components/datatable/demo7/demo7.component.html
@@ -1,56 +1,49 @@
 <div>
-    <data-table
-        [title]="'Employees'"
-        [items]="items"
-        [itemCount]="itemCount"
-        [pageLimits]="limits"
-        (reload)="reloadItems($event)"
-        [wrapperClass]="'table-responsive'"
-        (rowClick)="rowClick($event)"
-        (visibleColumnsChange)="onVisibleColumnChange($event)"
-        (rowDoubleClick)="rowDoubleClick($event)"
-        [rowTooltip]="rowTooltip" >
-        <data-table-column
-            [property]="'name'"
-            [header]="'Name'"
-            [sortable]="true"
-            [resizable]="true">
-        </data-table-column>
-        <data-table-column
-            [property]="'date'"
-            [header]="'Date'"
-            [sortable]="true">
-            <ng-template #dataTableCell let-item="item">
-                <span>{{ item.date | date:'yyyy-MM-dd' }}</span>
-            </ng-template>
-        </data-table-column>
-        <data-table-column
-            property="phoneNumber"
-            header="Phone number"
-            width="150px">
-        </data-table-column>
-        <data-table-column
-            [property]="'jobTitle'"
-            [header]="'Job title'"
-            [visible]="false">
-        </data-table-column>
-        <data-table-column
-            [property]="'active'"
-            [header]="'Active'"
-            [width]="100"
-            [resizable]="true">
-            <ng-template #dataTableHeader let-item="item">
-                <span style="color: rgb(232, 0, 0)">Active</span>
-            </ng-template>
-            <ng-template #dataTableCell let-item="item">
+  <app-table-wrapper
+    [title]="'Employees'"
+    [items]="items"
+    [itemCount]="itemCount"
+    [pageLimits]="limits"
+    (reload)="reloadItems($event)"
+    [wrapperClass]="'table-responsive'"
+    (rowClick)="rowClick($event)"
+    (rowDoubleClick)="rowDoubleClick($event)"
+    [rowTooltip]="rowTooltip" >
+    <app-column-wrapper
+      [property]="'date'"
+      [header]="'Date'"
+      [sortable]="true">
+      <ng-template #cellTemplate let-item="item">
+        <span>{{ item.date | date:'yyyy-MM-dd' }}</span>
+      </ng-template>
+    </app-column-wrapper>
+    <app-column-wrapper
+      property="phoneNumber"
+      header="Phone number"
+      width="150px">
+    </app-column-wrapper>
+    <app-column-wrapper
+      [property]="'jobTitle'"
+      [header]="'Job title'"
+      [visible]="false">
+    </app-column-wrapper>
+    <app-column-wrapper
+      [property]="'active'"
+      [header]="'Active'"
+      [width]="100"
+      [resizable]="true">
+      <ng-template #headerTemplate let-item="item">
+        <span style="color: rgb(232, 0, 0)">Active</span>
+      </ng-template>
+      <ng-template #cellTemplate let-item="item">
                 <span style="color: grey">
                 <span class="fa fa-check" *ngIf="item.active"></span>
                 <span class="fa fa-times" *ngIf="!item.active"></span>
                 </span>
-            </ng-template>
-        </data-table-column>
-    </data-table>
- </div>
+      </ng-template>
+    </app-column-wrapper>
+  </app-table-wrapper>
+</div>
 <br>
 <br>
 <p class="h6">Notes for testers and developers</p>
