--- a/projects/ngx-table/src/lib/components/table/table.component.html
+++ b/projects/ngx-table/src/lib/components/table/table.component.html
@@ -44,7 +44,7 @@
                   [title]="!sortAsc ? labels.sortAscending : labels.sortDescending">
             <span *ngIf="!column.headerTemplate" [id]="'col-'+id+'-'+i"
                   [textContent]="column.header"></span>
-            <span *ngIf="column.headerTemplate" [ngTemplateOutlet]="column.headerTemplate"
+            <span *ngIf="column.headerTemplate" [id]="'col-'+id+'-'+i" [ngTemplateOutlet]="column.headerTemplate"
                   [ngTemplateOutletContext]="{column: column}"></span>
             <span class="column-sort-icon" *ngIf="column.sortable">
               <i [hide]="column.property === sortBy" class="fa fa-sort column-sortable-icon"
