add tabindex to table

--- a/projects/ngx-table/src/lib/components/table/table.component.html
+++ b/projects/ngx-table/src/lib/components/table/table.component.html
@@ -9,7 +9,7 @@
   <data-table-header *ngIf="header"></data-table-header>
 
   <div class="data-table-box" [class]="wrapperClass">
-    <table class="table data-table" [id]="id">
+    <table class="table data-table" [id]="id" tabindex="-1">
       <caption class="sr-only" [textContent]="title"></caption>
       <thead>
       <tr>
