--- a/projects/ngx-table/src/lib/components/table/table.component.css
+++ b/projects/ngx-table/src/lib/components/table/table.component.css
@@ -1,32 +1,32 @@
 /* bootstrap override: */
 
-:host /deep/ .data-table.table > tbody + tbody {
+:host ::ng-deep .data-table.table > tbody + tbody {
   border-top: none;
 }
 
-:host /deep/ .data-table.table td {
+:host ::ng-deep .data-table.table td {
   vertical-align: middle;
 }
 
-:host /deep/ .data-table > thead > tr > th,
-:host /deep/ .data-table > tbody > tr > td {
+:host ::ng-deep .data-table > thead > tr > th,
+:host ::ng-deep .data-table > tbody > tr > td {
   overflow: hidden;
 }
 
-:host /deep/ .data-table > thead > tr > td {
+:host ::ng-deep .data-table > thead > tr > td {
   border-bottom: 2px solid #dee2e6;
 }
 
 /* I can't use the bootstrap striped table, because of the expandable rows */
-:host /deep/ .row-odd {
+:host ::ng-deep .row-odd {
   background-color: #F6F6F6;
 }
 
-:host /deep/ .row-even {
+:host ::ng-deep .row-even {
 }
 
 .data-table .substitute-rows > tr:hover,
-:host /deep/ .data-table .data-table-row:hover {
+:host ::ng-deep .data-table .data-table-row:hover {
   background-color: #ECECEC;
 }
 
