--- a/src/app/components/datatable/demo4/data-table-demo4.css
+++ b/src/app/components/datatable/demo4/data-table-demo4.css
@@ -1,5 +1,5 @@
 
-:host /deep/ .data-table-row {
+:host ::ng-deep .data-table-row {
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
