--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/datatable/demo6" routerLinkActive="active">Demo 6</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/datatable/demo7" routerLinkActive="active">Demo 7</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/datatable/demo8" routerLinkActive="active">Demo 8</a>
+      </li>
     </ul>
   </div>
 </nav>
